# ShuLi-Reader

./: .gitignore  CLAUDE.md  LICENSE  README.md  agent.md  build.gradle.kts  gradle.properties  reasonix.toml  review.md  settings.gradle.kts  test_regex.kts
.codegraph/: daemon.pid
.qoder/: settings.local.json
.serena/: project.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt
benchmark/: build.gradle.kts
docs/: 00-project-overview.md  01-requirements-analysis.md  02-technical-architecture.md  03-component-selection.md  04-ui-design-system.md  05-core-module-design.md  06-performance-optimization.md  07-project-structure.md  08-legado-reader-analysis.md  09-high-performance-libraries.md  10-settings-page-design.md  11-reading-progress-design.md  12-reader-screen-design.md  13-implementation-task-list-summary.md  13-implementation-task-list.md  13-phase1-completion-report.md  14-color-scheme.md  14-phase2-animation-report.md  14-release-checklist.md  15-visual-regression-plan.md  16-benchmark-execution-guide.md  17-phase-completion-report.md  17-reader-settings-redesign-tasks.md  18-rendering-engine-refactor.md  19-performance-optimization-plan.md  20-pagination-performance-optimization.md  20-quick-settings-redesign.md  21-WebDAV-sync.md  21-sync-backup-architecture-old.md  21-sync-backup-architecture-v4.md  21-sync-backup-architecture.md  22-feature-enhancement-tasks-p2.md  22-feature-enhancement-tasks.md  23-large-file-split-refactor.md  24-refactor-agent-prompt.md  25-book-info-extension-design.md  27-stats-screen-design.md  (+20 more)
(+1264 files in other folders)
